color glitch on mobile screen fixed

--- a/src/components/DayBox/style.css
+++ b/src/components/DayBox/style.css
@@ -59,7 +59,7 @@ p, h2, h4 {
 @media screen and (max-width: 480px) {
     body {
         display:flex; 
-        background-color: #F2F05C;
+      
 
     }
   }
